# Autonomous-Homing-Project

./: .gitmodules  README.md  README.md~  angles.txt  newTan.m  slidingModeAlg_Holonomic.m
MATLAB simulation/: holModel.m  slidingModeAlg_Holonomic.m
feature_detector/: detector.py
high_level_planner/: CMakeLists.txt  package.xml  planner.py
high_level_planner/src/: planner.cpp
keyboard_teleop/: CMakeLists.txt  control_homing.py  package.xml
keyboard_teleop/launch/: homing.launch  homing.launch~
keyboard_teleop/src/: control_homing.py
labels/: CMakeLists.txt  CMakeLists.txt~  package.xml
labels/msg/: LabelAngles.msg
labels/src/: Makefile~  a.out  feedTest.cpp  labelDetectNew.cpp  labeldetect.cpp
labels/src/Backup Codes/: 3poster.cpp  labeldetect.cpp  stitch2imgs_internet.cpp
stitching/: CMakeLists.txt  package.xml  stitch.cpp
stitching/src/: VisionCodetest.cpp  a.out  basecode2.cpp  basecodevideo.cpp  labeldetect.cpp  magdetect.cpp  magstitch.cpp  stitch.cpp  stitch.cpp.old
stitching/src/Backup Codes/: magdetect.cpp  magstitch.cpp
